# guardia

./: .editorconfig  .env.example  .gitignore  ANALISIS.md  CLAUDE.md  DEMO_GUIDE.md  Makefile  README.es.md  README.md  RUN_LOCAL.md  SECURITY_ROTATION.md  docker-compose.yml
backend/: .env.example  .gitignore  Dockerfile  alembic.ini  pyproject.toml
backend/app/: config.py  main.py
backend/app/api/: deps.py
backend/app/api/middleware/: auth.py  logging.py
backend/app/api/v1/: alerts.py  auth.py  cases.py  dashboard.py  emails.py  ingestion.py  monitoring.py  notifications.py  policies.py  quarantine.py  reports.py  router.py  settings.py
backend/app/core/: constants.py  exceptions.py  rate_limit.py  security.py
backend/app/db/: session.py
backend/app/db/migrations/: env.py
backend/app/db/migrations/versions/: 34f4a2bf5393_add_clerk_id_to_users.py  a1b2c3d4e5f6_redesign_data_model_v2.py  b2c3d4e5f6a7_add_case_number.py
backend/app/gateway/: __init__.py  gmail_delivery.py  handler.py  internal_api.py  parser.py  relay.py  server.py  storage.py
backend/app/models/: __init__.py  alert_event.py  alert_rule.py  analysis.py  case.py  case_note.py  custom_rule.py  email.py  evidence.py  fp_review.py  notification.py  policy_entry.py  quarantine_action.py  setting.py  user.py
backend/app/schemas/: __init__.py  alert.py  analysis.py  auth.py  case.py  case_note.py  dashboard.py  email.py  evidence.py  fp_review.py  monitoring.py  notification.py  policy.py  quarantine.py  report.py  setting.py  user.py
backend/app/services/: alert_service.py  auth_service.py  case_service.py  dashboard_service.py  email_service.py  fp_review_service.py  monitoring_service.py  notification_service.py  policy_service.py  quarantine_service.py  report_service.py  slack_service.py  user_sync_service.py
backend/app/services/ingestion/: __init__.py  queue.py
backend/app/services/pipeline/: __init__.py  bypass_checker.py  heuristic_data.py  heuristics.py  llm_explainer.py  ml_classifier.py  ml_explainer.py  models.py  orchestrator.py  url_resolver.py
backend/quarantine_store/06/: 57223b97-3c82-46bc-b6e4-5a4ab3dd684b.eml
backend/quarantine_store/19/: 6ca344b3-12d2-42dd-b830-4fe0433b3f8b.eml
backend/quarantine_store/29/: 2bb0e6b5-413e-4acf-8d92-d87cd8302d3b.eml
backend/quarantine_store/2b/: f732ff72-e129-4f6b-ba78-6fdbbc974bc1.eml
backend/quarantine_store/36/: 31f3b867-a58d-480c-88d8-6548a9ac029d.eml
backend/quarantine_store/6a/: 76957dd8-2f25-475d-8ac2-640068bfd304.eml
backend/quarantine_store/72/: c836637f-8130-4bee-b711-a6bacdad6f1d.eml
backend/quarantine_store/74/: f8ff64c9-0fcb-4814-962b-dce05599f3de.eml
backend/quarantine_store/9a/: a7cfcc04-8095-41d6-b0eb-f4eca6a46729.eml
backend/quarantine_store/a2/: 6a87d0e3-0bf7-4990-9706-70edad65ca00.eml
backend/quarantine_store/a6/: 78ad78bb-5ab3-412b-b050-7ae91341d613.eml
backend/quarantine_store/b1/: 13930236-5f48-499e-9d13-53d5a33c4645.eml
backend/quarantine_store/cb/: f40d885c-c9df-461d-9c08-690b4aead0a4.eml
backend/quarantine_store/d2/: cf18bed1-3585-439f-adec-3761af66e962.eml
backend/quarantine_store/de/: 6beb333b-9e98-44e3-b672-9d43ae3433e6.eml
backend/quarantine_store/fe/: 0e36ed6c-df2e-43e3-a61d-45e9a8564deb.eml
backend/scripts/: download_model.py  email_templates.py  seed_demo.py  seed_emails.py  seed_extra_20.py  seed_test_emails.py  simulate_email.py  test_ingestion_system.py  upload_to_hf.py
backend/scripts/datasets/: README.md  __init__.py  email_dataset_50.py  mbox_parser.py
backend/tests/: conftest.py
backend/tests/api/: test_auth.py  test_cases.py  test_dashboard.py  test_emails.py  test_monitoring.py
backend/tests/integration/: test_db_integration.py  test_email_ingestion.py  test_pipeline_flow.py  test_quarantine_flow.py
backend/tests/unit/: test_alert_service.py  test_bypass_checker.py  test_case_service.py  test_dashboard_service.py  test_email_service.py  test_gateway_handler.py  test_heuristics.py  test_ingestion_imports.py  test_ingestion_queue.py  test_llm_explainer.py  test_ml_classifier.py  test_monitoring_service.py  test_orchestrator.py  test_parser.py  test_security.py  test_url_resolver.py  test_user_sync_service.py
docs/: API_DOCUMENTATION.md  ARCHITECTURE.md  DEPLOYMENT.md  DEVELOPER_SETUP.md  INFRASTRUCTURE.md  ML_TRAINING_GUIDE.md  ONBOARDING.md  RUN_LOCAL.md  SMTP_GATEWAY_DEPLOYMENT.md  STATUS_REVIEW_v0.2.md  STATUS_REVIEW_v0.2_updated.md  STATUS_REVIEW_v0.3.md  STATUS_REVIEW_v0.4.md  TESTING.md  code-quality-audit.md  contexto-sesion.md  estado-v02.md  guardia-architecture.drawio.xml  modelo-datos.md  monitoring-tabs-proposal.md  pencil-to-code-guide.md  rag-iocs-implementation.md  review-diagnostico-completo.md  setup-clerk-auth.md  technical-evaluation-llm-improvements.md  traffic-simulation-guide.md
ml/: Dockerfile  pyproject.toml
ml/notebooks/: 01_data_exploration.ipynb  02_training.ipynb  03_evaluation.ipynb  README.md
ml/src/: config.py  evaluate.py  predict.py  preprocess.py  train.py
(+158 files in other folders)
