[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "guardia-backend"
version = "0.1.0"
description = "Guard-IA backend - Corporate email fraud detection middleware"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "PyJWT[crypto]>=2.8.0",
    "clerk-backend-api>=1.0.0",
    "httpx>=0.27.0",
    "transformers>=4.46.0",
    "torch>=2.5.0",
    "openai>=1.55.0",
    "python-multipart>=0.0.12",
    "structlog>=24.4.0",
    "aiosmtpd>=1.4.6",
    "aiosmtplib>=3.0.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "httpx>=0.27.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.ruff.lint.per-file-ignores]
"app/services/pipeline/llm_explainer.py" = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
addopts = "--cov=app --cov-config=pyproject.toml --cov-report=term-missing"

[tool.coverage.run]
source = ["app"]
omit = [
    "app/main.py",
    "app/api/*",
    "app/db/*",
    "app/schemas/*",
    "app/models/*",
    "app/config.py",
    "app/services/auth_service.py",
    "app/services/case_service.py",
    "app/services/dashboard_service.py",
    "app/services/email_service.py",
    "app/services/fp_review_service.py",
    "app/services/notification_service.py",
    "app/services/policy_service.py",
    "app/services/quarantine_service.py",
    "app/services/report_service.py",
    "app/services/user_sync_service.py",
    "app/gateway/handler.py",
    "app/gateway/relay.py",
    "app/gateway/server.py",
    "app/gateway/storage.py",
    "app/core/exceptions.py",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "if __name__ == .__main__.",
    "pass",
    "async def list_rules",
    "async def create_rule",
    "async def get_rule",
    "async def update_rule",
    "async def delete_rule",
    "async def list_events",
]
show_missing = true
fail_under = 90

[tool.coverage.html]
directory = "htmlcov"
