[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "guardia-backend"
version = "0.1.0"
description = "Guard-IA backend - Corporate email fraud detection middleware"
requires-python = ">=3.11"
dependencies = [
    "fastapi>=0.115.0",
    "uvicorn[standard]>=0.32.0",
    "sqlalchemy[asyncio]>=2.0.0",
    "asyncpg>=0.30.0",
    "alembic>=1.14.0",
    "pydantic>=2.0.0",
    "pydantic-settings>=2.0.0",
    "PyJWT[crypto]>=2.8.0",
    "clerk-backend-api>=1.0.0",
    "httpx>=0.27.0",
    "openai>=1.55.0",
    "python-multipart>=0.0.12",
    "structlog>=24.4.0",
    "aiosmtpd>=1.4.6",
    "aiosmtplib>=3.0.0",
    "slowapi>=0.1.9",
    "google-auth>=2.23.0",
    "google-api-python-client>=2.100.0",
]

[tool.setuptools]
packages = ["app"]

[project.optional-dependencies]
ml = [
    "transformers>=4.46.0",
    "torch>=2.5.0",
    "safetensors>=0.4.0",
]
dev = [
    "pytest>=8.0.0",
    "pytest-asyncio>=0.24.0",
    "pytest-cov>=6.0.0",
    "httpx>=0.27.0",
    "ruff>=0.8.0",
    "mypy>=1.13.0",
    "testcontainers[postgres]>=4.0.0",
]

[tool.ruff]
target-version = "py311"
line-length = 100

[tool.ruff.lint]
select = ["E", "F", "I", "N", "W"]

[tool.ruff.lint.per-file-ignores]
"app/services/pipeline/llm_explainer.py" = ["E501"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
ignore_missing_imports = true

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]

[tool.coverage.run]
source = ["app"]
omit = [
    "*/migrations/*",
    "*/tests/*",
    "*/__pycache__/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "if __name__ == .__main__.:",
    "raise NotImplementedError",
    "pass",
    "except ImportError:",
]
show_missing = true
fail_under = 60

[tool.coverage.html]
directory = "htmlcov"
