[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "guardia-ml"
version = "0.1.0"
description = "Guard-IA ML pipeline - DistilBERT email fraud classifier"
requires-python = ">=3.11"
dependencies = [
    "transformers>=4.46.0",
    "torch>=2.5.0",
    "datasets>=3.1.0",
    "scikit-learn>=1.5.0",
    "pandas>=2.2.0",
    "numpy>=2.1.0",
    "mlflow>=2.17.0",
    "matplotlib>=3.9.0",
    "seaborn>=0.13.0",
]

[project.optional-dependencies]
dev = [
    "jupyter>=1.1.0",
    "ipykernel>=6.29.0",
]
